# Data_crawler

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  compile_commands.json  main  main.cpp  news_parser.py  test.html  thanhnien_sitemap.txt
.cmake/api/v1/reply/: cache-v2-034c2aaa8851586dd553.json  cmakeFiles-v1-2b8f37e65a6d240a178e.json  codemodel-v2-32336f2eca1dc5c86af3.json  index-2023-01-05T03-50-26-0536.json  target-main-Debug-0e491c8dc9c33c54d5a8.json
log/: dantri_sitemap_log.txt  nguoiduatin_sitemap_log.txt  phapluat_sitemap_log.txt  thanhnien_sitemap_log.txt  tienphong_sitemap_log.txt  vietnamnet_sitemap_log.txt  vtc_sitemap_log.txt  zing_sitemap_log.txt
util/: helper.cc  helper.h  news.cc  news.h  parser.cc  parser.h
